maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: i  is already defined as variable i
var i:Int = 0;
    ^JediEscaper:23: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type Int
  setIndication(xBaggle,yBaggle,i);
                                ^JediEscaper:24: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type ?
  i += 1;
  ^JediEscaper:24: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type ?
  i += 1;
  ^JediEscaper:27: error: not found: value YBaggle
  y = YBaggle;
      ^JediEscaper:33: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type Int
      setIndication(x,y-1,i);
                          ^JediEscaper:36: error: not found: value auMurOuest
    if ( !auMurOuest(x,y) ){
          ^JediEscaper:37: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type Int
      setIndication(x-1,y,i);
                          ^JediEscaper:40: error: not found: value auMurSud
    if ( !auMurSud(x,y) ){
          ^JediEscaper:41: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type Int
      setIndication(x,y+1,i);
                          ^JediEscaper:44: error: not found: value auMurEst
    if ( !auMurEst(x,y) ){
          ^JediEscaper:45: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type Int
      setIndication(x+1,y,i);
                          ^JediEscaper:48: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type ?
    i+=1;
    ^JediEscaper:48: error: ambiguous reference to overloaded definition,
both method i in class JediEscaper of type => Int
and  method i in class JediEscaper of type => Int
match expected type ?
    i+=1;
    ^JediEscaper:7: error: method i_= is defined twice
  conflicting symbols both originated in file 'plm.runtime1.JediEscaper'
var i:Int = 0;
    ^JediEscaper:7: error: method i is defined twice
  conflicting symbols both originated in file 'plm.runtime1.JediEscaper'
var i:Int = 0;
    ^